--- a/hi.css
+++ b/hi.css
@@ -127,7 +127,7 @@
   justify-content: space-between;
   padding: 0.75rem 1rem;
   border-top: 1px solid #64748b;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgb(255, 255, 255);
   border-radius: 0.5rem;
   margin-top: 2rem;
   flex-wrap: wrap;
